--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   "author": "Ana Berk",
   "license": "ISC",
   "devDependencies": {
-    "browser-sync": "^2.26.5",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "browser-sync": "^2.26.7",
     "del": "^4.0.0",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
+    "gulp-babel": "^7.0.1",
     "gulp-cache": "^1.1.1",
     "gulp-cssnano": "^2.1.3",
     "gulp-imagemin": "^5.0.3",
@@ -26,6 +29,9 @@
     "stylelint": "^10.0.1"
   },
   "dependencies": {
-    "gulp-concat": "^2.6.1"
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-uglifyjs": "^0.6.2"
   }
 }
